[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
discord = "^1.7.3"
jishaku = "^2.5.1"
youtube_dl = "^2021.12.17"
validators = "^0.20.0"
config = "^0.5.1"
emojis = "^0.6.0"
pymongo = "^4.2.0"
python-dotenv = "^0.20.0"
asyncpg = "^0.26.0"
handler = "^1.3.0"
motor = "^3.0.0"
moon-tools = "^1.0.0"
pygit2 = "^1.10.0"
requests = "^2.28.1"
better-profanity = "^0.7.0"
wavelink = "^1.3.2"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"